# cluster-file-compression

./: .gitignore  apiimage.txt  email.txt  manifest.yaml  matnr.txt  workerimage.txt
api/: app.py
worker/: CMakeCache.txt  CMakeLists.txt  Dockerfile  READEME.md  compressed.huff  out.huff  run.sh
worker/src/: encoding.cpp  main.cpp
worker/src/core/: bit_packer.cpp  bit_packer.hpp  decoding.cpp  decoding.hpp  encoding.cpp  encoding.hpp  file_handler.cpp  file_handler.hpp  huffman_tree.cpp  huffman_tree.hpp  stats.cpp  stats.hpp  types.hpp  zk_client.cpp  zk_client.hpp
worker/src/core/proto/: huffman.proto
worker/src/tests/: test.cpp
